Fixing admin actus wrapping

--- a/public/stylesheets/admin_index_style.css
+++ b/public/stylesheets/admin_index_style.css
@@ -64,7 +64,7 @@ h2 {
 .fig-table {
 	max-width: 100%;
 	overflow-x: scroll;
-	white-space: nowrap;
+	white-space: wrap;
 }
 
 .options {
